--- a/index.html
+++ b/index.html
@@ -31,5 +31,57 @@
             <p class="no_margin">Aprende de los expertos con las mejores recetas y consejos</p>
         </div>
     </header>
+    <div class="contenido_principal contenedor">
+        <main class="blog">
+            <h2>Nuestro blog</h2>
+            <article class="entrada_blog">
+                <div class="imagen">
+                    <img src="../Café/img/blog.jpg" alt="Img_nuestro_blog">
+                </div>
+                <div class="contenido_blog">
+                    <h3>Tipos de granos de café</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos inventore voluptas deleniti. Nam natus id asperiores quibusdam voluptatem, qui, quia impedit laborum officia aspernatur molestiae laudantium in deserunt quis veniam!</p>
+                    <a href="entrada.html" class="boton boton_primario">Leer entrada</a>
+                </div>
+            </article>
+            <article class="entrada_blog">
+                <div class="imagen">
+                    <img src="../Café/img/blog2.jfif" alt="Img_nuestro_blog2">
+                </div>
+                <div class="contenido_blog">
+                    <h3>Tres deliciosas recetas de café</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos inventore voluptas deleniti. Nam natus id asperiores quibusdam voluptatem, qui, quia impedit laborum officia aspernatur molestiae laudantium in deserunt quis veniam!</p>
+                    <a href="entrada.html" class="boton boton_primario">Leer entrada</a>
+                </div>
+            </article>
+            <article class="entrada_blog">
+                <div class="imagen">
+                    <img src="../Café/img/blog3.jfif" alt="Img_nuestro_blog3">
+                </div>
+                <div class="contenido_blog">
+                    <h3>Beneficios de consumir café</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos inventore voluptas deleniti. Nam natus id asperiores quibusdam voluptatem, qui, quia impedit laborum officia aspernatur molestiae laudantium in deserunt quis veniam!</p>
+                    <a href="entrada.html" class="boton boton_primario">Leer entrada</a>
+                </div>
+            </article>
+        </main>
+        <aside class="cursos">
+            <h2>Nuestros cursos y talleres</h2>
+            <ul class="cursos_lista">
+                <li class="curso">
+                    <h4>Técnicas de extracción del café</h4>
+                    <p>Precio: <span>Gratis</span></p>
+                    <p>Cupo: <span>20</span></p>
+                    <a href="cursos.html" class="boton boton_secundario">Más información</a>
+                </li>
+                <li class="curso">
+                    <h4>Cuatro recetas de café para principiantes</h4>
+                    <p>Precio: <span>Gratis</span></p>
+                    <p>Cupo: <span>20</span></p>
+                    <a href="cursos.html" class="boton boton_secundario">Más información</a>
+                </li>
+            </ul>
+        </aside>
+    </div>
 </body>
 </html>
