--- a/index.html
+++ b/index.html
@@ -83,5 +83,17 @@
             </ul>
         </aside>
     </div>
+    <footer class="site_footer">
+        <div class="contenedor">
+            <div class="barra">
+                <p class="no_margin">Blog<span>deCafé</span></p>
+                <nav class="navegacion">
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="cursos.html">Cursos</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
